# qtextparser

./: .gitignore  CMakeLists.txt  build.sh  qtextparser.pro
benchmark/: CMakeLists.txt  main.cpp  main.h
definitions/: ColdFusion-old.xml  ColdFusion.dia  ColdFusion.xml
generator/: CMakeLists.txt  generator.cpp
include/QTextParser/: QTextParser  QTextParserElement  QTextParserLanguageDefinition  QTextParserLanguageDefinitionMergeChildren.h  QTextParserLanguageDefinitionToken  QTextParserLine  QTextParserLoader  qtextparser.h  qtextparserelement.h  qtextparserlanguagedefinition.h  qtextparserlanguagedefinitionmergechildren.h  qtextparserlanguagedefinitiontoken.h  qtextparserline.h  qtextparserloader.h
src/: CMakeLists.txt  qtextparser.cpp  qtextparser.h  qtextparser.pri  qtextparserelement.cpp  qtextparserlanguagedefinition.cpp  qtextparserlanguagedefinitiontoken.cpp  qtextparserline.cpp  qtextparserloader.cpp
tests/: CMakeLists.txt  main.cpp  qdetail.cpp  qdetail.h  qmaindialog.cpp  qmaindialog.h  qmaindialog.ui
